2010-07-06  Chong Yidong  <cyd@stupidchicken.com>

	* fringe.c (draw_fringe_bitmap_1): Use lookup_named_face to get
	fringe face id, so face-remapping-alist works (Bug#6091).

2010-07-06  Juanma Barranquero  <lekktu@gmail.com>

	* w32.c, w32console.c, w32fns.c, w32font.c, w32heap.c, w32inevt.c
	* w32menu.c, w32proc.c, w32reg.c, w32select.c, w32term.c
	* w32uniscribe.c, w32xfns.c: Convert function definitions to standard C.

2010-07-06  Andreas Schwab  <schwab@linux-m68k.org>

	* xterm.c (x_get_keysym_name): Change type of parameter to int.
	* lisp.h: Declare x_get_keysym_name.
	* keyboard.c (modify_event_symbol): Don't declare
	x_get_keysym_name here.

2010-07-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* ecrt0.c: Revert conversion to standard C.

2010-07-05  Dan Nicolaescu  <dann@ics.uci.edu>

	* vm-limit.c (memory_warnings):
	* keyboard.c (modify_event_symbol):
	* floatfns.c (rounding_driver, ceiling2, floor2, truncate2)
	(round2, emacs_rint):
	* process.c (send_process, old_sigpipe): Convert function
	definitions and declarations to standard C.

2010-07-05  Juanma Barranquero  <lekktu@gmail.com>

	* buffer.c, cm.c, eval.c, keyboard.c, process.c, term.c, vm-limit.c,
	* xdisp.c: Convert function definitions to standard C.

	* cm.c (cmputc): Arg C is now int, not char.
	* process.c (Fmake_network_process): Cast sockaddr_in* to sockaddr*.

2010-07-05  James Cloos  <cloos@jhcloos.com>

	* xterm.h (Xatom_net_wm_name, Xatom_net_wm_icon_name): New.

	* xterm.c (x_term_init): Intern the _NET_WM_NAME and
	_NET_WM_ICON_NAME atoms.

	* xfns.c (x_set_name_internal): Set the EWMH _NET_WM_NAME
	and _NET_WM_ICON_NAME properties, too, matching what is
	done in the Gtk+ case.

2010-07-05  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c (XTring_bell, XTset_terminal_window): Fix wrong prototype.

	* xsmfns.c (SSDATA): New macro.
	(smc_save_yourself_CB, x_session_initialize): Use SSDATA for strings
	passed to strlen/strcpy/strcat.